# Minigraph

./: .gitignore  CMakeLists.txt  a.out  bfs.txt  bfs_bw_output.csv  bfs_cpu_output.csv  extract_bw.py  extract_cpu_util.py  fwy_run.bash  pr.txt  pr_bw_output.csv  pr_cpu_output.csv  seq-64KB_read.fio  test_ifstream.cpp  wcc.txt  wcc_bw_output.csv  wcc_cpu_output.csv
apps/cpp/: bfs_vc.cpp  bfs_vc_modify.cpp  pr_vc.cpp  wcc_vc_batch.cpp
cmake/: FindDoubleConversion.cmake  FindGFlags.cmake  Findfolly.cmake  Findglog.cmake
minigraph/: CMakeLists.txt
minigraph/components/: computing_component.h  discharge_component.h  load_component.h
minigraph/graphs/: edgelist.h
minigraph/utility/io/: csr_io_adapter.h  edge_list_io_adapter.h
minigraph/utility/paritioner/: edge_cut_partitioner.h  vertex_cut_partitioner.h
tools/: graph_partition.cpp
